--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/delete-modal/delete-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/delete-modal/delete-modal.component.html
@@ -1,5 +1,5 @@
-<h1 mat-dialog-title>Hi {{data.idToDelete}}</h1>
-<button (click)=afficherId()>ici</button>
+<h1 mat-dialog-title>Etes vous sûr de vouloir supprimer cet élément?</h1>
+<button (click)=deleteMateriel()>Confirmer</button>
 <div>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
+  <button mat-button (click)="onNoClick()">Annuler</button>
 </div>
