Header : adaptation pour mobile, Calendrier : adaptation pour utilisateur

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -32,7 +32,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <div >
+    <div class="cont1">
       <router-outlet></router-outlet>
       <app-footer></app-footer>
     </div>
