--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.css
@@ -1,7 +1,6 @@
 .example-spacer {
     flex: 1 1 auto;
   }
-
   .accordeon{
 margin-top: 50px;
   }
@@ -40,3 +39,10 @@ CSS
 background-position:center;
 height : 88vh; */
 /* } */
+
+@media(max-width:600px){
+  .cont1{
+    margin-right:1rem;
+    overflow-x: hidden;
+  }
+}
