--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/delete-modal/delete-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/delete-modal/delete-modal.component.html
@@ -1,5 +1,14 @@
-<h1 mat-dialog-title>Etes vous sûr de vouloir supprimer cet élément?</h1>
-<button (click)=deleteMateriel()>Confirmer</button>
-<div>
-  <button mat-button (click)="onNoClick()">Annuler</button>
+<div class="modal-header">
+<h2 mat-dialog-title>  Souhaitez-vous vraiment supprimer ce matériel?</h2>
+</div>
+<div class="modal-body">
+
+</div>
+<div class="modal-footer">
+ <button  mat-raised-button color="warn" id="bouton-supprimer" (click)="deleteMateriel()">
+    Confirmer
+</button>
+  <button mat-raised-button class="bouton-annuler" (click)="onNoClick()">
+    Annuler
+</button>
 </div>
