--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/ajout-modal/ajout-modal.component.html
@@ -4,6 +4,16 @@
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
+                <span class="input-group-text" id="titre">Titre</span>
+            </div>
+            <input type="text" class="form-control"
+                aria-label="description" aria-describedby="titre" 
+                placeholder="Titre de l'évènement"
+                name="titre" [(ngModel)]="event.titre" #description="ngModel" required>
+        </div>
+
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
                 <span class="input-group-text" id="type">Type</span>
             </div>
             <select class="custom-select" id="type" name="type" [(ngModel)]="event.type" required #type="ngModel">
