--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/cellule/cellule.component.html
@@ -9,19 +9,19 @@
                     {{incSpan()}}
                     <ng-container *ngIf="!testSpan(); else plusSpan">
                         <span class="ev btn btn-light"  [ngClass]='getEventColor(e)' (click)="$event.stopPropagation();editModal();">
-                            {{e.description}}
+                            {{e.titre}}
                         </span>
                     </ng-container> 
                     <ng-template #plusSpan>
                         <ng-container *ngIf="(getNbSpan()<3)&&!testFini(i+1) else nonFini">
                             <span class="ev btn btn-light"  [ngClass]='getEventColor(e)' (click)="$event.stopPropagation();editModal();">
-                                {{e.description}}
+                                {{e.titre}}
                             </span>
                         </ng-container>
                         <ng-template #nonFini>
                             <ng-container *ngIf="getNbSpan()<=3&&testFini(i+1) else sup3">
                                 <span class="ev btn btn-light"  [ngClass]='getEventColor(e)' (click)="$event.stopPropagation();editModal();">
-                                    {{e.description}}
+                                    {{e.titre}}
                                 </span>
                             </ng-container>
                             <ng-template #sup3>
