--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/plus-modal/plus-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/evenement/cellule/plus-modal/plus-modal.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-content>
     <ng-container *ngFor="let e of data.eventData; let i = index">
-        <span class="ev btn btn-light"  [ngClass]='getEventColor(e)'>
+        <span class="ev btn btn-light"  [ngClass]='getEventColor(e)' (click)="$event.stopPropagation();editModal(e,data.ac);">
             {{e.titre}}
         </span>
     </ng-container>
