--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/update-materiel/update-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/update-materiel/update-materiel.component.html
@@ -1,8 +1,6 @@
 <div >
-   
-
     <div id="form-materiel-update" >
-
+        
         <form #updateMaterielForm=ngForm (ngSubmit)=updateMateriel()>
 
 
@@ -10,7 +8,6 @@
                 Référence: <input type="text" name=ref [(ngModel)]=materiel.ref required #ref="ngModel"
                    >
             </div>
-
             <div [hidden]="ref.valid || ref.pristine">
                 La référence est obligatoire.
             </div>
@@ -73,3 +70,76 @@
         </form>
     </div>
 </div>
+
+
+<!-- <mat-card id="card-head">
+
+</mat-card>
+
+<mat-card class="update-materiel-container">
+    <h1 id="title">Modification des informations du matériel</h1>
+   <div id="form-materiel">
+
+        <form [formGroup]="materielForm" (ngSubmit)="updateMateriel()">
+        <mat-form-field appearance="legacy">
+                <mat-label>Référence</mat-label>
+                <mat-icon matPrefix class="icone-info-card">reorder</mat-icon>
+                <input matInput type="text" formControlName="ref">
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Marque</mat-label>
+                <mat-icon matPrefix class="icone-info-card">branding_watermark</mat-icon>
+                <input matInput type="text" formControlName="marque">
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Modèle</mat-label>
+                <mat-icon matPrefix class="icone-info-card">local_offer</mat-icon>
+                <input matInput type="text" formControlName="modele">
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Prix</mat-label>
+                <mat-icon matPrefix class="icone-info-card">euro_symbol</mat-icon>
+                <input matInput type="number" formControlName="prix">
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Etat du matériel</mat-label>
+                <mat-icon matPrefix class="icone-info-card">settings</mat-icon>
+                <mat-select formControlName="etat">
+                    <mat-option [value]=1>En cours de fonctionnement</mat-option>
+                    <mat-option [value]=2>Problème mineur détecté</mat-option>
+                    <mat-option [value]=3>En panne</mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Type de Matériel</mat-label>
+                <mat-icon matPrefix class="icone-info-card">local_gas_station</mat-icon>
+                <mat-select formControlName="typeMateriel">
+                    <mat-option *ngFor="let item of typeMatList" [value]="item">
+                        {{item}}
+                      </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Localisation</mat-label>
+                <mat-icon matPrefix class="icone-info-card">place</mat-icon>
+                <input matInput type="text" formControlName="localisation">
+            </mat-form-field>
+
+            <mat-form-field appearance="legacy">
+                <mat-label>Date d'achat</mat-label>
+                <mat-icon matPrefix class="icone-info-card">date_range</mat-icon>
+                <input matInput type="date" formControlName="dateAchat">
+            </mat-form-field>
+
+            <div>
+                <button mat-raised-button [disabled]=!materielForm.valid class="bouton-update">Valider les modifications</button>
+            </div>
+        </form>
+    </div>
+</mat-card> -->
