maj de l'ajout du document dans la bdd
encore quelques trucs à revoir mais ça fonctionne : on retrouve le document en question ajouté via le formulaire front dans la BDD

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/footer/footer.component.html
@@ -9,7 +9,7 @@
     <div class="col-xs-6 col-md-4">
       <mat-list >
         <a mat-list-item [routerLink]="'/evenement'" class="footer-liste"> Agenda </a>
-        <a mat-list-item [routerLink]="'/utilisateur/accueil'" class="footer-liste">Documents </a>
+        <a mat-list-item [routerLink]="'/documentListe'" class="footer-liste">Documents </a>
 
        </mat-list>
     </div>
