Ajout de  la modale info matériel en cliquant sur un élément de la liste.

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/liste-materiel/liste-materiel.component.html
@@ -95,14 +95,14 @@
                     <form #getIdMaterielUpdate=ngForm>
                         <input type="hidden" name=idMaterielUpdate [(ngModel)]=mat.idMat required #idMaterielUpdate="ngModel">
 
-                        <button mat-mini-fab class="bouton-modifier" (click)="redirectToUpdate(mat.idMat)">
+                        <button mat-mini-fab class="bouton-modifier" (click)="redirectToUpdate(mat.idMat); $event.stopPropagation()">
                             <mat-icon>edit</mat-icon>
                         </button>
                     </form>
                                   
                         <form #getIdMaterielUtils=ngForm>
                             <input type="hidden" name=idMaterielUtils [(ngModel)]=mat.idMat required #idMaterielUtils="ngModel">
-                        <button mat-mini-fab color="warn" id="bouton-supprimer" (click)="deleteModal(mat.idMat)">
+                        <button mat-mini-fab color="warn" id="bouton-supprimer" (click)="$event.stopPropagation(); deleteModal(mat.idMat)">
                             <mat-icon>delete_sweep</mat-icon>
                         </button>
                     </form>
@@ -112,3 +112,4 @@
         </tbody>
     </table>
 </div>
+
