--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/info-modal/info-modal.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/info-modal/info-modal.component.css
@@ -1,59 +1,37 @@
- /*<< important styles*/
- .scene{
-    /* !3D space! */
-    perspective: 600px;
-  }
-  .items{
-    position: relative;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-  }
-  .item{
-    position: absolute;
-    backface-visibility: hidden;
-  }
-  .back {
-    transform: rotateY( 180deg );
-  }
-  
-  .items:hover {
-    transform: rotateY(180deg);
+.modal-body{
+  height: 85%;
+}
+
+.card-top{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 30px;
+}
+.icone-info-card{
+  margin-right: 5px;
+}
+
+.content{
+  padding-top: 2rem;
+  padding-left: 2.6rem;
+}
+.mat-elevation-z4 {
+  margin-left: 10%;
+  width: 80%;
+}
+
+  .bouton-modifier{
+    color:#fff;
+    background-image: linear-gradient(to right, #CDDFA0, #6FD08C );
+    margin-bottom: 10px;
+    float: left;
   }
 
-  /*variations >>*/
-  b.item font{
-  
-    font-size: 100px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  .bouton-supprimer{
+    float: right;
   }
-  .scene{
-    margin-left: 20%;
-    width: 300px;
-    min-width: 150px;
-    height: 500px;
-    margin: 22px;
+
+  .bouton-fermer{
+    float: unset;
   }
   
-  .items{
-    width: 100%;
-    height: 100%;
-    border-radius: 35px;
-  }
-  .item{
-    width: 100%;
-    height: 100%;
-    display: flex;   
-    font-size: 30px;
-    color: white;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    text-shadow: 2px 2px #e02577;
-  }
-  
-  .items-1{
-    background-image: linear-gradient(to top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
-  }
