--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/info-modal/info-modal.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/materiel/info-modal/info-modal.component.html
@@ -1,6 +1,46 @@
 
-<div class="scene">
-    <div class="items items-1">
-      <div class="item font">Hello</div>
-      <div class="item back">It's</div>       </div>
-  </div>
+<div class="modal-body">
+  <mat-card class="mat-elevation-z4">
+    <mat-card-header>      
+        <mat-card-title>{{materiel.marque}}</mat-card-title>
+        <mat-card-subtitle>{{materiel.modele}}</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="/assets/images/toad.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+        <mat-list dense>
+            <mat-list-item>
+                <mat-icon matPrefix class="icone-info-card">fingerprint</mat-icon>
+               localisation :  {{materiel.localisation}}
+            </mat-list-item>
+            <mat-list-item>
+                <mat-icon matPrefix class="icone-info-card">cake</mat-icon>
+               niveau d'état :  {{materiel.etat}}
+            </mat-list-item>
+            <mat-list-item>
+                <mat-icon matPrefix class="icone-info-card">alternate_email</mat-icon>
+               date d'achat : {{materiel.dateAchat}}
+            </mat-list-item>
+        </mat-list>
+    </mat-card-content>
+</mat-card>
+
+</div>
+<div class="modal-footer">
+  <form #getIdMaterielUpdate=ngForm>
+    <input type="hidden" name=idMaterielUpdate [(ngModel)]=materiel.idMat required #idMaterielUpdate="ngModel">
+
+    <button mat-mini-fab class="bouton-modifier" (click)="redirectToUpdate(materiel.idMat)">
+      <mat-icon>edit</mat-icon>
+    </button>
+  </form>
+
+  <form #getIdMaterielUtils=ngForm>
+    <input type="hidden" name=idMaterielUtils [(ngModel)]=materiel.idMat required #idMaterielUtils="ngModel">
+    <button mat-mini-fab color="warn" id="bouton-supprimer" (click)="deleteModal(materiel.idMat)">
+      <mat-icon>delete_sweep</mat-icon>
+    </button>
+  </form>
+  <button mat-raised-button color="primary" class="bouton-fermer" (click)="onNoClick()">
+    Ok
+  </button>
+</div>
