Modifs Home page

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.css
@@ -43,3 +43,8 @@
     font-size: 6em;
     opacity: 0.8;
 }
+/* Second ROW */
+.second-row{
+    width: 100%;
+background-color: lightgoldenrodyellow;
+}
