--- a/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="padding: 0;">
   <div class="row">
-    
+
     <div class="col col-gauche">
       <div class="container">
         <h1 id="nom-appli">REGISTATION</h1>
@@ -42,12 +42,78 @@
     </div>
 
   </div>
-<!-- Fin Row principale -->
+  <!-- Fin Row principale -->
 
-<!-- Début Row2 présentation Equipe -->
+<!-- ROW NOM APPLI -->
+  <div class="row align-items-center" style="background: #e9ecef; height: 300px;">
+    <div class="container">
+      <div class="row">
+        <h1>RegiStation, votre nouvelle appli indispensable</h1>
+      </div>
+    </div>
+  </div>
+<!-- FIN -->
 
+  <!-- DEBUT ROW3 -->
+  <div class="row align-items-center" style="background: #f8f9fa; height: 500px;">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <h2>Gain de temps</h2>
+        </div>
+        <div class="col-4">
+          <div class="row">
+            <p>Grâce à son interface simple à utiliser, vous allez pouvoir gagner du temps en effectuant vos tâches
+              quotidiennes</p>
+          </div>
+        </div>
+        <div class="col-3" style="text-align: center;">
+          <mat-icon style="font-size:100px">speed</mat-icon>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- FIN ROW3  -->
 
-<app-presentation-team></app-presentation-team>
+  <!-- DEBUT ROW4 -->
+  <div class="row align-items-center" style="background: #e9ecef; height: 500px;">
+    <div class="container">
+      <div class="row" style="margin-bottom: 40px;">
+        <h1>Des outils à votre disposition</h1>
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <mat-icon style="font-size:100px">today</mat-icon>
+          <h3>Agenda</h3>
+        </div>
+        <div class="col-2">
+          <mat-icon style="font-size:100px">local_gas_station</mat-icon>
+          <h3>Gestionnaire de matériel</h3>
+        </div>
+        <div class="col-2">
+          <mat-icon style="font-size:100px">file_copy</mat-icon>
+          <h3>Gestionnaire de documents</h3>
+        </div>
+        <div class="col-2">
+          <mat-icon style="font-size:100px">groups</mat-icon>
+          <h3>Gestionnaire d'équipe</h3>
+        </div>
+        <div class="col-2">
+          <mat-icon style="font-size:100px">policy</mat-icon>
+          <h3>Sécurité</h3>
+        </div>
+        <div class="col-2">
+          <mat-icon style="font-size:100px">save</mat-icon>
+          <h3>Base de données</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- FIN ROW4  -->
+
+  <!-- Début Row présentation Equipe -->
+  <app-presentation-team></app-presentation-team>
+
 
 
 </div>
