--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -7,13 +7,13 @@
 
   <a style="color:white;" [routerLink]="'/utilisateur/liste'"><img src="assets/images/logo.png" alt="logo-navbar" id="logo-navbar">RegiStation</a>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="" aria-label="icone-utilisateur" >
+  <button mat-icon-button class="" aria-label="icone-utilisateur">
     <mat-icon>person</mat-icon>
   </button>
-  <button mat-icon-button class="" aria-label="icone-notifications" >
+  <button mat-icon-button class="" aria-label="icone-notifications"  >
     <mat-icon matBadge="6" matBadgeColor="warn">notifications</mat-icon>
   </button>
-  <button mat-icon-button class="" (click)="logout()" aria-label="icone-signout">
+  <button mat-icon-button class="" (click)="logout()" aria-label="icone-signout" >
     <mat-icon>power_settings_new</mat-icon>
   </button>
 </mat-toolbar>
@@ -24,10 +24,10 @@
     <mat-nav-list>
       <a mat-list-item [routerLink]="'/utilisateur/liste'" (click)="sidenav.close()"><mat-icon class="icone-side" >dashboard</mat-icon>Tableau de bord</a>
       <a mat-list-item [routerLink]="'/document'" (click)="sidenav.close()"><mat-icon class="icone-side" >description</mat-icon>Documents</a>
-      <a mat-list-item [routerLink]="'/materiel'" (click)="sidenav.close()"><mat-icon class="icone-side" >local_gas_station</mat-icon>Matériel</a>
+      <a mat-list-item [routerLink]="'/materiel/liste'" (click)="sidenav.close()"><mat-icon class="icone-side" >local_gas_station</mat-icon>Matériel</a>
       <a mat-list-item [routerLink]="'/moniteur'" (click)="sidenav.close()"><mat-icon class="icone-side" >video_label</mat-icon>Moniteur</a>
       <a mat-list-item [routerLink]="'/garage'" (click)="sidenav.close()"><mat-icon class="icone-side" >directions_car</mat-icon>Garage</a>
-      <a mat-list-item [routerLink]="'/agenda'" (click)="sidenav.close()"><mat-icon class="icone-side">today</mat-icon>Agenda</a>
+      <a mat-list-item [routerLink]="'/evenement/agenda'" (click)="sidenav.close()"><mat-icon class="icone-side">today</mat-icon>Agenda</a>
       <a mat-list-item [routerLink]="'/utilisateur/contact'" (click)="sidenav.close()"><mat-icon class="icone-side" >contact_support</mat-icon>Contactez-nous</a>
     </mat-nav-list>
   </mat-sidenav>
