redirection dans les components pour bien seoir comme il faut
redirection dans les components document + headerpour bien seoir comme il faut

--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/document2/document-form/document-form.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/document2/document-form/document-form.component.html
@@ -39,7 +39,7 @@
   </div>
   <div>
     <button mat-raised-button [disabled]=!documentForm2.valid class="bouton-ajouter" (click)="ajouterDocument()" (submit)="ajouterDocument()">Ajouter les informations du document
-      document</button>
+    </button>
   </div>
   <div>
     <input type="file" id="customFile" (change)="selectFile($event)">
