--- a/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 
     <div class="row align-items-center" style="background: #e9ecef; height: 400px;">
         <div class="container">
@@ -39,9 +39,7 @@
 
             </div>
         </div>
-    </div>
-
-    <div class="row align-items-center" style="background: #e9ecef; height: 400px;">
+   
         <mat-card>
             <div class="div-bouton">
                 <button mat-icon-button [routerLink]="'/evenement'">
@@ -75,4 +73,9 @@
             </div>
         </mat-card>
     </div>
+</div> -->
+<div class="container">
+<div class="row">
+    <h1>Ravi de vous revoir {{currentUser.matricule}} !</h1>
+</div>
 </div>
