--- a/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.html
@@ -76,6 +76,6 @@
 </div> -->
 <div class="container">
 <div class="row">
-    <h1>Ravi de vous revoir {{currentUser.matricule}} !</h1>
+    <h1>Ravi de vous revoir {{utilisateurSimple.prenom}} !</h1>
 </div>
 </div>
