--- a/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.css
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.css
@@ -1,14 +1,12 @@
 .mat-card {
-    width: 100px;
-    height: 100px; 
-  
-}
-.row-affichage{
-    margin-left: 40px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    width: 130px;
+    height: 130px; 
 }
 .icons-dashboard{
-  font-size: 100px;
+  font-size: 80px;
   color: crimson;
+  margin-top: 30px;
+}
+.row{
+  margin-top: 20px;
 }
