--- a/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/modules/shared/header/header.component.html
@@ -1,19 +1,20 @@
 
 
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="sidenav.open()" class="icone-bars" aria-label="icone-bars" >
+  <button mat-icon-button (click)="sidenav.open()" class="icone-bars" aria-label="icone-bars" *ngIf="isConnect">
     <mat-icon>menu</mat-icon>
   </button>
 
   <a style="color:white;" [routerLink]="'/dashboard'"><img src="assets/images/logo.png" alt="logo-navbar" id="logo-navbar">RegiStation</a>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="" aria-label="icone-utilisateur">
+  <p>{{utilisateurSimple.prenom}}</p>
+  <button mat-icon-button class="" aria-label="icone-utilisateur" *ngIf="isConnect">
     <mat-icon>person</mat-icon>
   </button>
-  <button mat-icon-button class="" aria-label="icone-notifications"  >
+  <button mat-icon-button class="" aria-label="icone-notifications" *ngIf="isConnect" >
     <mat-icon matBadge="6" matBadgeColor="warn">notifications</mat-icon>
   </button>
-  <button mat-icon-button class="" (click)="logout()" aria-label="icone-signout" >
+  <button mat-icon-button class="" (click)="logout()" aria-label="icone-signout" *ngIf="isConnect" >
     <mat-icon>power_settings_new</mat-icon>
   </button>
 </mat-toolbar>
