--- a/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.html
+++ b/pfr-registation-frontend/pfr-registation-angular/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
 
     <div class="row">
         <mat-card>
-            <button mat-icon-button [routerLink]="'/evenement'">
+            <button mat-icon-button [routerLink]="'/evenement/agenda'">
                 <mat-icon class="icons-dashboard">today</mat-icon>
             </button>
         </mat-card>
